fix: offset main and add z-index to nav

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ main {
 	background-color: #EFF2F4;
 	position: absolute;
 	top: 128px;
-	left: 250px;
+	left: 300px;
 	padding-left: 40px;
 	padding-right: 34px;
 	display: flex;
@@ -31,6 +31,7 @@ nav {
 	padding: 30px 22px;
 	box-shadow: 0px 3.12501px 35.15638px 0px rgba(0, 0, 0, 0.08);
 	background-color: #fff;
+	z-index: 2;
 }
 
 .header {
@@ -63,7 +64,7 @@ nav {
 .nav__arrow {
 	position: absolute;
 	top: 75px;
-	right: 15px;
+	right: -45px;
 	border: none;
 }
 
